--- a/src/main/resources/fxml/ProductosAM.fxml
+++ b/src/main/resources/fxml/ProductosAM.fxml
@@ -53,7 +53,7 @@
                         <Insets left="100.0" />
                      </GridPane.margin>
                   </Button>
-                  <Button fx:id="borrarBTN" mnemonicParsing="false" onAction="#borrarProducto" prefWidth="120.0" text="BORRAR" GridPane.columnIndex="2">
+                  <Button fx:id="borrarBTN" mnemonicParsing="false" onAction="#borrarProducto" prefWidth="120.0" text="DESACTIVAR" GridPane.columnIndex="2">
                      <font>
                         <Font name="Noto Sans Bold" size="12.0" />
                      </font>
