--- a/src/main/resources/fxml/PedidosAM.fxml
+++ b/src/main/resources/fxml/PedidosAM.fxml
@@ -57,14 +57,6 @@
                               <Insets left="100.0" />
                            </GridPane.margin>
                         </Button>
-                        <Button fx:id="borrarBTN" mnemonicParsing="false" onAction="#borrarPedido" prefWidth="120.0" text="BORRAR" GridPane.columnIndex="2">
-                           <font>
-                              <Font name="Noto Sans Bold" size="12.0" />
-                           </font>
-                           <GridPane.margin>
-                              <Insets left="10.0" right="10.0" />
-                           </GridPane.margin>
-                        </Button>
                         <HBox alignment="CENTER_LEFT">
                            <children>
                               <Label contentDisplay="RIGHT" text="LOCALES: ">
@@ -72,11 +64,11 @@
                                     <Font name="Noto Sans Bold" size="14.0" />
                                  </font>
                                  <graphic>
-                                    <ComboBox fx:id="cbElementos" />
+                                    <ComboBox fx:id="cbLocales" />
                                  </graphic>
                               </Label>
-                              <TextField fx:id="txtFiltro" prefHeight="27.0" prefWidth="100.0" />
-                              <Label fx:id="infoFiltro" alignment="CENTER" prefHeight="27.0" prefWidth="24.0">
+                              <TextField fx:id="txtFiltroLocales" prefHeight="27.0" prefWidth="100.0" />
+                              <Label fx:id="infoFiltroLocal" alignment="CENTER" prefHeight="27.0" prefWidth="24.0">
                                  <graphic>
                                     <OctIconView fill="#3cb478" glyphName="INFO" size="22" />
                                  </graphic>
@@ -92,20 +84,26 @@
                      </padding>
                   </GridPane>
                   <Separator prefWidth="200.0" />
-                  <HBox alignment="CENTER" prefHeight="40.0" prefWidth="200.0">
+                  <HBox alignment="CENTER" prefHeight="40.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
                      <children>
-                        <Label contentDisplay="RIGHT" prefHeight="30.0" prefWidth="500.0" text="BUSCAR:">
+                        <Label alignment="CENTER_RIGHT" contentDisplay="RIGHT" prefHeight="30.0" prefWidth="270.0" text="BUSCAR:">
                            <font>
                               <Font name="Noto Sans Bold" size="14.0" />
                            </font>
                            <graphic>
-                              <ComboBox fx:id="cbBuscar" prefHeight="30.0" prefWidth="430.0" />
+                              <ComboBox fx:id="cbPedidos" prefHeight="30.0" prefWidth="200.0" />
+                           </graphic>
+                        </Label>
+                        <TextField fx:id="txtFiltroPedidos" prefHeight="27.0" prefWidth="100.0" />
+                        <Label fx:id="infoFiltroPedido" alignment="CENTER" prefHeight="27.0" prefWidth="24.0">
+                           <graphic>
+                              <OctIconView fill="#3cb478" glyphName="INFO" size="22" />
                            </graphic>
                         </Label>
                      </children>
-                     <padding>
-                        <Insets bottom="10.0" left="5.0" right="5.0" top="10.0" />
-                     </padding>
+                     <VBox.margin>
+                        <Insets left="5.0" right="5.0" />
+                     </VBox.margin>
                   </HBox>
                   <GridPane alignment="CENTER">
                      <columnConstraints>
@@ -131,7 +129,7 @@
                         </Label>
                         <Label alignment="CENTER" contentDisplay="BOTTOM" prefWidth="200.0" text="FECHA DE ENTREGA" GridPane.columnIndex="2">
                            <graphic>
-                              <DatePicker fx:id="fechaEntregaDP" prefWidth="190.0" />
+                              <DatePicker fx:id="fechaEntregaDP" editable="false" prefWidth="190.0" showWeekNumbers="true" />
                            </graphic>
                            <font>
                               <Font name="Noto Sans Bold" size="14.0" />
@@ -142,7 +140,7 @@
                         </Label>
                         <Label alignment="CENTER" contentDisplay="BOTTOM" prefWidth="200.0" text="FECHA DEL PEDIDO" GridPane.columnIndex="1">
                            <graphic>
-                              <DatePicker fx:id="fechaPedidoDP" prefWidth="190.0" />
+                              <DatePicker fx:id="fechaPedidoDP" editable="false" prefWidth="190.0" showWeekNumbers="true" />
                            </graphic>
                            <font>
                               <Font name="Noto Sans Bold" size="14.0" />
