--- a/src/main/resources/fxml/PedidosAM.fxml
+++ b/src/main/resources/fxml/PedidosAM.fxml
@@ -173,15 +173,18 @@
                   </Label>
                   <TableView fx:id="lineasTV" VBox.vgrow="ALWAYS">
                      <columns>
-                        <TableColumn fx:id="lineaTC" maxWidth="-1.0" minWidth="100.0" prefWidth="-1.0" text="LINEA" />
-                        <TableColumn fx:id="productoTC" maxWidth="-1.0" minWidth="200.0" prefWidth="-1.0" text="PRODUCTO" />
-                        <TableColumn fx:id="cantidadTC" maxWidth="-1.0" minWidth="100.0" prefWidth="-1.0" text="CANTIDAD" />
-                        <TableColumn fx:id="estadoTC" maxWidth="-1.0" minWidth="100.0" prefWidth="-1.0" text="ESTADO" />
-                        <TableColumn fx:id="accionesTC" maxWidth="-1.0" minWidth="100.0" prefWidth="-1.0" text="ACCIONES" />
+                        <TableColumn fx:id="lineaTC" maxWidth="150.0" minWidth="50.0" prefWidth="100.0" text="LINEA" />
+                        <TableColumn fx:id="productoTC" maxWidth="300.0" minWidth="100.0" prefWidth="200.0" text="PRODUCTO" />
+                        <TableColumn fx:id="cantidadTC" maxWidth="150.0" minWidth="50.0" prefWidth="100.0" text="CANTIDAD" />
+                        <TableColumn fx:id="estadoTC" maxWidth="150.0" minWidth="50.0" prefWidth="100.0" text="ESTADO" />
+                        <TableColumn fx:id="accionesTC" maxWidth="150.0" minWidth="50.0" prefWidth="100.0" text="ACCIONES" />
                      </columns>
                      <VBox.margin>
                         <Insets bottom="20.0" left="10.0" right="10.0" top="10.0" />
                      </VBox.margin>
+                     <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                     </columnResizePolicy>
                   </TableView>
                </children>
             </VBox>
