--- a/src/main/resources/fxml/Empleados.fxml
+++ b/src/main/resources/fxml/Empleados.fxml
@@ -45,7 +45,7 @@
                         <RowConstraints maxHeight="40.0" minHeight="40.0" percentHeight="0.0" prefHeight="40.0" vgrow="SOMETIMES" />
                      </rowConstraints>
                      <children>
-                        <Button fx:id="nuevoBTN" mnemonicParsing="false" onAction="#nuevoEmpleado" prefWidth="120.0" text="NUEVO" GridPane.columnIndex="1">
+                        <Button mnemonicParsing="false" onAction="#nuevoEmpleado" prefWidth="120.0" text="NUEVO" GridPane.columnIndex="1">
                            <font>
                               <Font name="Noto Sans Bold" size="12.0" />
                            </font>
@@ -53,7 +53,7 @@
                               <Insets left="100.0" />
                            </GridPane.margin>
                         </Button>
-                        <Button fx:id="borrarBTN" mnemonicParsing="false" onAction="#borrarEmpleado" prefWidth="120.0" text="DESACTIVAR" GridPane.columnIndex="2">
+                        <Button mnemonicParsing="false" onAction="#borrarEmpleado" prefWidth="120.0" text="DESACTIVAR" GridPane.columnIndex="2">
                            <font>
                               <Font name="Noto Sans Bold" size="12.0" />
                            </font>
