--- a/src/main/resources/fxml/Dashboard.fxml
+++ b/src/main/resources/fxml/Dashboard.fxml
@@ -6,34 +6,36 @@
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.DashboardController">
    <children>
-      <Label text="GESTIÓN DE PEDIDOS">
+      <Label alignment="TOP_CENTER" contentDisplay="TOP" text="GESTIÓN DE PEDIDOS" VBox.vgrow="ALWAYS">
          <font>
             <Font name="Noto Sans Bold" size="24.0" />
          </font>
       </Label>
-      <Separator blendMode="EXCLUSION" prefHeight="5.0" prefWidth="200.0">
+      <Separator blendMode="EXCLUSION" prefHeight="5.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
          <opaqueInsets>
             <Insets />
          </opaqueInsets>
       </Separator>
-      <ScrollPane fx:id="scrollPanel" VBox.vgrow="ALWAYS">
-         <content>
-            <TableView fx:id="tvCuadro" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
-               <columns>
-                  <TableColumn fx:id="tcProductos" editable="false" maxWidth="200.0" minWidth="100.0" prefWidth="200.0" text="PRODUCTOS" />
-                  <TableColumn fx:id="tcClientes" editable="false" minWidth="500.0" prefWidth="1000.0" sortable="false" text="CLIENTES" />
-                  <TableColumn fx:id="tcTotal" editable="false" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" resizable="false" sortable="false" text="TOTAL UND" />
-               </columns>
-            </TableView>
-         </content>
-         <VBox.margin>
-            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-         </VBox.margin>
-      </ScrollPane>
+      <HBox prefHeight="100.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+         <children>
+            <ScrollPane fx:id="scrollPanel" HBox.hgrow="ALWAYS">
+               <content>
+                  <TableView fx:id="tvCuadro" tableMenuButtonVisible="true">
+                     <columns>
+                        <TableColumn fx:id="tcProductos" editable="false" maxWidth="-1.0" minWidth="100.0" prefWidth="200.0" text="PRODUCTOS" />
+                        <TableColumn fx:id="tcClientes" editable="false" maxWidth="-1.0" minWidth="500.0" prefWidth="1000.0" sortable="false" text="CLIENTES" />
+                        <TableColumn fx:id="tcTotal" editable="false" maxWidth="-1.0" minWidth="100.0" prefWidth="100.0" resizable="false" sortable="false" text="TOTAL UND" />
+                     </columns>
+                  </TableView>
+               </content>
+            </ScrollPane>
+         </children>
+      </HBox>
    </children>
 </VBox>
