--- a/src/main/resources/fxml/Locales.fxml
+++ b/src/main/resources/fxml/Locales.fxml
@@ -2,12 +2,15 @@
 
 <?import de.jensd.fx.glyphs.octicons.OctIconView?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.chart.BarChart?>
+<?import javafx.scene.chart.CategoryAxis?>
+<?import javafx.scene.chart.LineChart?>
+<?import javafx.scene.chart.NumberAxis?>
+<?import javafx.scene.chart.PieChart?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
@@ -173,24 +176,60 @@
                         </Label>
                      </children>
                   </GridPane>
-                  <Separator prefWidth="200.0" />
-                  <Label text="Empleados asignados">
+                  <Separator prefWidth="200.0">
                      <VBox.margin>
-                        <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
+                        <Insets bottom="5.0" top="5.0" />
+                     </VBox.margin></Separator>
+                  <Label text="Análisis del local" VBox.vgrow="ALWAYS">
+                     <VBox.margin>
+                        <Insets bottom="50.0" left="10.0" right="10.0" />
                      </VBox.margin>
                      <font>
                         <Font name="Noto Sans Bold" size="18.0" />
                      </font>
                   </Label>
-                  <TableView fx:id="tvEmpleados" VBox.vgrow="ALWAYS">
-                     <columns>
-                        <TableColumn fx:id="tcAsignados" maxWidth="-1.0" minWidth="100.0" prefWidth="-1.0" text="ASIGNADO" />
-                        <TableColumn fx:id="tcEmpleados" maxWidth="-1.0" minWidth="400.0" prefWidth="-1.0" text="EMPLEADO" />
-                     </columns>
+                  <GridPane alignment="CENTER">
+                     <columnConstraints>
+                        <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" percentWidth="0.0" />
+                        <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" percentWidth="0.0" />
+                        <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" percentWidth="0.0" />
+                     </columnConstraints>
+                     <rowConstraints>
+                        <RowConstraints percentHeight="0.0" valignment="CENTER" vgrow="ALWAYS" />
+                     </rowConstraints>
+                     <children>
+                        <PieChart fx:id="tartaPorcentaje" prefHeight="400.0" prefWidth="450.0" title="Referencia respecto al resto de locales" GridPane.columnIndex="2">
+                           <GridPane.margin>
+                              <Insets bottom="5.0" left="5.0" right="5.0" top="20.0" />
+                           </GridPane.margin>
+                        </PieChart>
+                        <LineChart fx:id="lineasEvolutivo" prefWidth="450.0" title="Evolutivo de pedidos">
+                           <xAxis>
+                              <CategoryAxis fx:id="evoDiaAx" label="Dias" side="BOTTOM" />
+                           </xAxis>
+                           <yAxis>
+                              <NumberAxis fx:id="evoPreAx" label="Precio" minorTickCount="1" side="LEFT" tickLength="5.0" />
+                           </yAxis>
+                           <GridPane.margin>
+                              <Insets bottom="5.0" left="5.0" right="5.0" top="20.0" />
+                           </GridPane.margin>
+                        </LineChart>
+                        <BarChart fx:id="barrasComparativo" prefWidth="450.0" title="Comparativo de pedidos" GridPane.columnIndex="1">
+                           <xAxis>
+                              <CategoryAxis fx:id="comLocAx" label="Locales" side="BOTTOM" />
+                           </xAxis>
+                           <yAxis>
+                              <NumberAxis fx:id="comPreAx" label="Precio" side="LEFT" />
+                           </yAxis>
+                           <GridPane.margin>
+                              <Insets bottom="5.0" left="5.0" right="5.0" top="20.0" />
+                           </GridPane.margin>
+                        </BarChart>
+                     </children>
                      <VBox.margin>
-                        <Insets left="10.0" right="10.0" />
+                        <Insets top="20.0" />
                      </VBox.margin>
-                  </TableView>
+                  </GridPane>
                </children>
             </VBox>
          </center>
@@ -201,7 +240,7 @@
             <Separator maxWidth="300.0" minWidth="100.0" prefWidth="200.0" visible="false" BorderPane.alignment="CENTER" />
          </right>
          <bottom>
-            <Separator maxHeight="300.0" minHeight="100.0" orientation="VERTICAL" prefHeight="200.0" visible="false" BorderPane.alignment="CENTER" />
+            <Separator maxHeight="300.0" minHeight="100.0" orientation="VERTICAL" prefHeight="150.0" visible="false" BorderPane.alignment="CENTER" />
          </bottom>
       </BorderPane>
    </children>
