--- a/src/main/resources/fxml/Dashboard.fxml
+++ b/src/main/resources/fxml/Dashboard.fxml
@@ -28,14 +28,20 @@
                <content>
                   <TableView fx:id="tvCuadro" tableMenuButtonVisible="true">
                      <columns>
-                        <TableColumn fx:id="tcProductos" editable="false" maxWidth="-1.0" minWidth="100.0" prefWidth="200.0" text="PRODUCTOS" />
-                        <TableColumn fx:id="tcClientes" editable="false" maxWidth="-1.0" minWidth="500.0" prefWidth="1000.0" sortable="false" text="CLIENTES" />
-                        <TableColumn fx:id="tcTotal" editable="false" maxWidth="-1.0" minWidth="100.0" prefWidth="100.0" resizable="false" sortable="false" text="TOTAL UND" />
+                        <TableColumn fx:id="tcProductos" editable="false" maxWidth="-1.0" minWidth="200.0" prefWidth="-1.0" text="PRODUCTOS" />
+                        <TableColumn fx:id="tcClientes" editable="false" maxWidth="-1.0" minWidth="500.0" prefWidth="-1.0" sortable="false" text="CLIENTES" />
+                        <TableColumn fx:id="tcTotal" editable="false" maxWidth="-1.0" minWidth="100.0" prefWidth="100.0" sortable="false" text="TOTAL UND" />
                      </columns>
                   </TableView>
                </content>
+               <HBox.margin>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </HBox.margin>
             </ScrollPane>
          </children>
+         <VBox.margin>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </VBox.margin>
       </HBox>
    </children>
 </VBox>
