--- a/src/main/resources/fxml/Dashboard.fxml
+++ b/src/main/resources/fxml/Dashboard.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
@@ -22,6 +23,17 @@
             <Insets />
          </opaqueInsets>
       </Separator>
+      <Label alignment="TOP_CENTER" contentDisplay="RIGHT" text="FECHA DE REPARTO: " textAlignment="CENTER">
+         <graphic>
+            <DatePicker fx:id="dpFecha" />
+         </graphic>
+         <font>
+            <Font name="Noto Sans Bold" size="14.0" />
+         </font>
+         <VBox.margin>
+            <Insets top="5.0" />
+         </VBox.margin>
+      </Label>
       <HBox prefHeight="100.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
          <children>
             <ScrollPane HBox.hgrow="ALWAYS">
@@ -39,7 +51,7 @@
             </ScrollPane>
          </children>
          <VBox.margin>
-            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+            <Insets bottom="5.0" left="5.0" right="5.0" />
          </VBox.margin>
       </HBox>
    </children>
