--- a/src/main/resources/fxml/Locales.fxml
+++ b/src/main/resources/fxml/Locales.fxml
@@ -50,7 +50,7 @@
                         <RowConstraints maxHeight="40.0" minHeight="40.0" percentHeight="0.0" prefHeight="40.0" vgrow="SOMETIMES" />
                      </rowConstraints>
                      <children>
-                        <Button mnemonicParsing="false" onAction="#nuevoProducto" prefWidth="120.0" text="NUEVO" GridPane.columnIndex="1">
+                        <Button mnemonicParsing="false" onAction="#nuevoLocal" prefWidth="120.0" text="NUEVO" GridPane.columnIndex="1">
                            <font>
                               <Font name="Noto Sans Bold" size="12.0" />
                            </font>
@@ -58,7 +58,7 @@
                               <Insets left="100.0" />
                            </GridPane.margin>
                         </Button>
-                        <Button mnemonicParsing="false" onAction="#borrarProducto" prefWidth="120.0" text="DESACTIVAR" GridPane.columnIndex="2">
+                        <Button mnemonicParsing="false" onAction="#desactivarLocal" prefWidth="120.0" text="DESACTIVAR" GridPane.columnIndex="2">
                            <font>
                               <Font name="Noto Sans Bold" size="12.0" />
                            </font>
@@ -102,12 +102,13 @@
                      <columnConstraints>
                         <ColumnConstraints halignment="RIGHT" hgrow="ALWAYS" percentWidth="0.0" />
                         <ColumnConstraints halignment="RIGHT" hgrow="ALWAYS" percentWidth="0.0" />
+                        <ColumnConstraints halignment="RIGHT" hgrow="ALWAYS" percentWidth="0.0" />
                      </columnConstraints>
                      <rowConstraints>
                         <RowConstraints maxHeight="90.0" minHeight="90.0" percentHeight="0.0" prefHeight="90.0" valignment="CENTER" vgrow="ALWAYS" />
                      </rowConstraints>
                      <children>
-                        <Label contentDisplay="BOTTOM" prefWidth="300.0" text="Nombre de la calle">
+                        <Label contentDisplay="BOTTOM" prefWidth="300.0" text="Nombre de la calle" GridPane.columnIndex="1">
                            <graphic>
                               <TextField fx:id="txtCalle" prefWidth="300.0" />
                            </graphic>
@@ -115,10 +116,10 @@
                               <Font name="Noto Sans Bold" size="14.0" />
                            </font>
                            <GridPane.margin>
-                              <Insets bottom="10.0" right="10.0" top="10.0" />
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                            </GridPane.margin>
                         </Label>
-                        <Label contentDisplay="BOTTOM" prefWidth="60.0" text="Numero" GridPane.columnIndex="1">
+                        <Label contentDisplay="BOTTOM" prefWidth="60.0" text="Numero" GridPane.columnIndex="2">
                            <graphic>
                               <TextField fx:id="txtNum" prefWidth="50.0" />
                            </graphic>
@@ -127,6 +128,17 @@
                            </font>
                            <GridPane.margin>
                               <Insets bottom="10.0" left="10.0" top="10.0" />
+                           </GridPane.margin>
+                        </Label>
+                        <Label alignment="TOP_CENTER" contentDisplay="BOTTOM" text="Nombre del Local">
+                           <graphic>
+                              <TextField fx:id="txtNombre" />
+                           </graphic>
+                           <font>
+                              <Font name="Noto Sans Bold" size="14.0" />
+                           </font>
+                           <GridPane.margin>
+                              <Insets bottom="10.0" right="10.0" top="10.0" />
                            </GridPane.margin>
                         </Label>
                      </children>
