--- a/src/main/resources/fxml/Dashboard.fxml
+++ b/src/main/resources/fxml/Dashboard.fxml
@@ -3,7 +3,6 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -36,19 +35,12 @@
       </Label>
       <HBox prefHeight="100.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
          <children>
-            <ScrollPane HBox.hgrow="ALWAYS">
-               <content>
-                  <TableView fx:id="tvCuadro" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" tableMenuButtonVisible="true">
-                     <columns>
-                        <TableColumn fx:id="tcProductos" editable="false" maxWidth="-1.0" minWidth="200.0" prefWidth="-1.0" text="PRODUCTOS" />
-                        <TableColumn fx:id="tcTotal" editable="false" maxWidth="-1.0" minWidth="100.0" prefWidth="100.0" sortable="false" text="TOTAL UND" />
-                     </columns>
-                  </TableView>
-               </content>
-               <HBox.margin>
-                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-               </HBox.margin>
-            </ScrollPane>
+            <TableView fx:id="tvCuadro" tableMenuButtonVisible="true" HBox.hgrow="ALWAYS">
+               <columns>
+                  <TableColumn fx:id="tcProductos" editable="false" maxWidth="-1.0" minWidth="200.0" prefWidth="-1.0" text="PRODUCTOS" />
+                  <TableColumn fx:id="tcTotal" editable="false" maxWidth="-1.0" minWidth="100.0" prefWidth="100.0" sortable="false" text="TOTAL UND" />
+               </columns>
+            </TableView>
          </children>
          <VBox.margin>
             <Insets bottom="5.0" left="5.0" right="5.0" />
