--- a/src/main/resources/fxml/Empleados.fxml
+++ b/src/main/resources/fxml/Empleados.fxml
@@ -77,6 +77,14 @@
                                     <OctIconView fill="#3cb478" glyphName="INFO" size="22" />
                                  </graphic>
                               </Label>
+                              <Button fx:id="btnAceptarCambio" mnemonicParsing="false" text="ACEPTAR CAMBIOS" HBox.hgrow="ALWAYS">
+                                 <HBox.margin>
+                                    <Insets left="20.0" />
+                                 </HBox.margin>
+                                 <font>
+                                    <Font name="Noto Sans Bold" size="12.0" />
+                                 </font>
+                              </Button>
                            </children>
                            <GridPane.margin>
                               <Insets right="100.0" />
